# Chat

Chat/: Chat.pro  Chat.qtvscr  Chat.vcxproj  Chat.vcxproj.filters  Chat_resource.rc  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatuserlist.cpp  chatuserlist.h  findfaileddialog.cpp  findfaileddialog.h  findfaileddialog.ui  finduserdialog.cpp  finduserdialog.h  finduserdialog.ui  friendrequestdialog.cpp  friendrequestdialog.h  friendrequestdialog.ui  friendverifydialog.cpp  friendverifydialog.h  friendverifydialog.ui  global.cpp  global.h  httpmgr.cpp  httpmgr.h  listwidget.cpp  listwidget.h  listwidget.ui  loadingdialog.cpp  loadingdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+31 more)
ChatServer/: CMakeLists.txt  CServer.cpp  CServer.h  ChatServer.cpp  Common.h  ConfigMgr.cpp  ConfigMgr.h  ErrorCode.h  JsonParser.cpp  JsonParser.h  Logger.cpp  Logger.h  LogicSystem.cpp  LogicSystem.h  Message.proto  MySqlConnection.cpp  MySqlConnection.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  ScopeExit.cpp  ScopeExit.h  Session.cpp  Session.h  Singleton.h  StatusServiceClient.cpp  StatusServiceClient.h
ChatServer/config/: config.json
GateServer/: CMakeLists.txt  CServer.cpp  CServer.h  Common.h  ConfigMgr.h  ErrorCode.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  JsonParser.cpp  JsonParser.h  LogicSystem.cpp  LogicSystem.h  Message.proto  MySqlConnection.cpp  MySqlConnection.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  RedisMgr.cpp  RedisMgr.h  RedisPool.cpp  RedisPool.h  ScopeExit.h  Singleton.h  StatusServiceClient.cpp  StatusServiceClient.h  UriCode.cpp  UriCode.h  Utility.h  VerifyCodeClient.cpp  VerifyCodeClient.h
GateServer/config/: config.json
StatusServer/: CMakeLists.txt  Common.h  ConfigMgr.cpp  ConfigMgr.h  ErrorCode.h  Logger.cpp  Logger.h  Message.proto  Singleton.h  StatusServer.cpp  StatusServerImpl.cpp  StatusServerImpl.h
StatusServer/config/: config.json
VerifyServer/: CMakeLists.txt  Common.h  ConfigMgr.cpp  ConfigMgr.h  Logger.h  RedisMgr.cpp  RedisMgr.h  RedisPool.cpp  RedisPool.h  ScopeExit.cpp  ScopeExit.h  SendMail.cpp  SendMail.h  Singleton.h  VerifyServer.cpp  VerifyServerImpl.cpp  VerifyServerImpl.h
VerifyServer/config/: config.json
VerifyServer/python/: email_sender.py
